--- a/Mini Project Personal Portfolio/index.html
+++ b/Mini Project Personal Portfolio/index.html
@@ -24,7 +24,7 @@
 
   <section id="about" class="section">
     <div class="container">
-      <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic"/>
+      <img src="./profile.jpg.jpeg" alt="Profile Picture" class="profile-pic"/>
       <div>
         <h2>About Me</h2>
         <p>I’m a Quality Control Coordinator with a BSc in Food Process Engineering and a passion for front-end development, food science advocacy, and digital innovation.
